--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "mkcert"
 version = "0.1.0"
+authors = ["Andreas Longo"]
+license = "GPL-3.0-or-later"
+repository = "https://github.com/andreaslongo/mkcert"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-clap = { version = "4.3.19", features = ["derive"] }
-openssl = "0.10.55"
+clap = { version = "4.4.0", features = ["derive"] }
+openssl = "0.10.56"
