--- a/container/Containerfile
+++ b/container/Containerfile
@@ -1,6 +1,7 @@
+# https://github.com/rust-lang/docker-rust
 FROM docker.io/library/rust:slim-bookworm
 
-# Update OS packages and install OS level dependencies
+# Update OS packages and install OS level dependencies if required
 RUN set -o errexit \
     set -o nounset \
     set -o pipefail \
@@ -13,6 +14,7 @@ RUN set -o errexit \
         pkg-config \
     && apt-get clean \
     && apt-get purge --assume-yes --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+    && apt-get check \
     && rm -rf /var/lib/apt/lists/*
 
 # Switch to non-root user
@@ -21,5 +23,14 @@ RUN set -o errexit \
     set -o pipefail \
     set -o xtrace \
     && useradd --create-home appuser
-WORKDIR /home/appuser
 USER appuser
+WORKDIR /home/appuser
+
+# Install Rust tools
+RUN set -o errexit \
+    set -o nounset \
+    set -o pipefail \
+    set -o xtrace \
+    && rustup component add \
+        clippy \
+        rustfmt
