--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ anstream = "0.6.4"
 clap = { version = "4.4.6", features = ["derive"] }
 openssl = "0.10.57"
 owo-colors = "3.5.0"
+rpassword = "7.2.0"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_yaml = "0.9.25"
