--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v3
+      - run: sudo apt-get update && sudo apt-get install pkg-config libssl-dev
       - run: rustup target add x86_64-unknown-linux-musl
       - run: cargo build --release --target x86_64-unknown-linux-musl
         env:
@@ -27,6 +28,7 @@ jobs:
     runs-on: "windows-latest"
     steps:
       - uses: actions/checkout@v3
+      - run: choco install openssl
       - run: rustup target add x86_64-pc-windows-msvc
       - run: cargo build --release --target x86_64-pc-windows-msvc
         env:
