--- a/container/Containerfile
+++ b/container/Containerfile
@@ -11,6 +11,8 @@ RUN set -o errexit \
     && apt-get upgrade --assume-yes --no-install-recommends \
     && apt-get install --assume-yes --no-install-recommends \
         libssl-dev \
+        make \
+        perl \
         pkg-config \
     && apt-get clean \
     && apt-get purge --assume-yes --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
