--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,15 @@
 name = "mkcert"
 version = "0.2.0"
 edition = "2021"
-authors = ["Andreas Longo"]
+authors = ["Andreas Longo <git@andreaslongo.com>"]
 license = "GPL-3.0-or-later"
 repository = "https://github.com/andreaslongo/mkcert"
+homepage = "https://github.com/andreaslongo/mkcert"
 description = "A simple program to create X.509 certificates"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
+human-panic = "1.2.1"
 openssl = { version = "0.10.57", features = ["vendored"] }
 rpassword = "7.2.0"
 serde = { version = "1.0.188", features = ["derive"] }
